Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,8 @@ pool:
 steps:
 - script: |
     # Set up environment for the project
-    conda init bash
-    conda env create -f pytorch-env.yml
-    conda activate pytorch-env
-  displayName: 'Environment creation'
+    python run_pytorch_control.py
+  displayName: 'Environment creation and code run'
 
 - script: |
     # Run the training script
